#3 - fixed genre behind rating in tablet breakpoint

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -7,6 +7,12 @@ main .row {
 
 h3 {
   padding-bottom: 10px; }
+  @media (max-width: 390px) {
+    h3 {
+      font-size: 1.2rem; } }
+  @media (min-width: 768px) and (max-width: 991px) {
+    h3 {
+      font-size: 1.2rem; } }
 
 @media (max-width: 767px) {
   .col-md-6 {
