--- a/src/main/webapp/scss/components/pageLayout/_general.scss
+++ b/src/main/webapp/scss/components/pageLayout/_general.scss
@@ -12,6 +12,12 @@ main {
 
 h3 {
   padding-bottom: 10px;
+  @media (max-width: 390px) {
+    font-size: 1.2rem;
+  }
+  @media (min-width: 768px) and (max-width: 991px) {
+    font-size: 1.2rem;
+  }
 }
 
 .col-md-6 {
